try direct configuration instead of preset

--- a/renovate.json
+++ b/renovate.json
@@ -7,9 +7,12 @@
   "packageRules": [
     {
       "matchPackageNames": ["node"],
-      "extends": [
-        ":maintainLockFilesWeekly"
-      ]
+      "lockFileMaintenance": {
+        "enabled": true,
+        "extends": [
+          "schedule:weekly"
+        ]
+      }
     }
   ]
 }
