--- a/php/composer.json
+++ b/php/composer.json
@@ -12,6 +12,11 @@
         }
     ],
     "require": {
-        "nesbot/carbon": "^2.71"
+        "nesbot/carbon": "^1.0"
+    },
+    "config": {
+        "allow-plugins": {
+            "kylekatarnls/update-helper": true
+        }
     }
 }
