--- a/renovate.json
+++ b/renovate.json
@@ -1,8 +1,7 @@
 {
   "$schema": "https://docs.renovatebot.com/renovate-schema.json",
   "extends": [
-    "config:base",
-    ":preserveSemverRanges"
+    "config:base"
   ],
   "packageRules": [
     {
@@ -12,7 +11,10 @@
         "extends": [
           "schedule:weekly"
         ]
-      }
+      },
+      "extends": [
+        ":preserveSemverRanges"
+      ]
     }
   ]
 }
