--- a/renovate.json
+++ b/renovate.json
@@ -8,7 +8,7 @@
       "matchManagers": ["npm"],
       "lockFileMaintenance": {
         "enabled": true,
-        "schedule": ["before 4am on monday"],
+        "schedule": ["before 4am on monday"]
       }
     }
   ]
