--- a/renovate.json
+++ b/renovate.json
@@ -4,14 +4,11 @@
     "config:base"
   ],
   "dependencyDashboardApproval": true,
-  "packageRules": [
-    {
-      "matchManagers": ["npm"],
+  "npm": {
       "lockFileMaintenance": {
         "enabled": true,
         "dependencyDashboardApproval": false,
         "schedule": ["before 4am on monday"]
       }
-    }
-  ]
+  }
 }
